--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,13 +7,38 @@ permissions:
   contents: write
   pull-requests: write
 
-name: bump
+name: Create release
 
 jobs:
-  release-please:
+  build:
+    name: Build pkg
     runs-on: ubuntu-latest
     steps:
+      - uses: @actions/checkout@v3
+      - uses: @actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Build
+        run: |
+          yarn -y && yarn build
+      - name: Upload build
+        uses: actions/upload-artifact@v3
+        with:
+          name: current-ars
+          path: build
+  release-please:
+    name: Bump+CL+release
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v3
+        with:
+          name: current-ars
       - uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
-          package-name: release-please-action
+          token: ${{secrets.GITHUB_TOKEN}}
+          package-name: ars
+          path: build/
+          pull-request-title-pattern: "chore${scope}: to release${component} ${version}"
