--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Upload build
         uses: actions/upload-artifact@v3
         with:
-          name: current-ars
+          name: ars-${{ github.event.inputs.version }}
           path: build
   release-please:
     name: Bump+CL+release
@@ -34,7 +34,7 @@ jobs:
       - name: Download build
         uses: actions/download-artifact@v3
         with:
-          name: current-ars
+          name: ars-${{ github.event.inputs.version }}
       - uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
