--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "auto-release-solution",
   "version": "1.0.0",
-  "description": "auto release solution by `release please package`",
-  "main": "index.js",
+  "description": "auto release solution by `release-please package`",
+  "main": "buil/index.js",
   "repository": "git@github.com:vios-onboarding/ars.git",
   "author": "Vital'ka <vios.job@gmail.com>",
   "license": "MIT",
@@ -12,9 +12,9 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
-    "esbuild": "^0.17.14",
-    "husky": "^8.0.3"
+    "@commitlint/cli": "17.5.1",
+    "@commitlint/config-conventional": "17.4.4",
+    "esbuild": "0.17.14",
+    "husky": "8.0.3"
   }
 }
