--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -38,7 +38,9 @@ jobs:
       - uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
+          default-branch: main
           token: ${{secrets.GITHUB_TOKEN}}
           package-name: ars
           path: build/
           pull-request-title-pattern: "chore${scope}: to release${component} ${version}"
+          pull-request-header: ":robot: I have created a release"
