--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "start": "node -r dotenv/config build/index.js",
     "build": "rm -rf dist && node esbuild.js",
     "prepare": "husky install"
   },
@@ -16,5 +17,8 @@
     "@commitlint/config-conventional": "17.4.4",
     "esbuild": "0.17.14",
     "husky": "8.0.3"
+  },
+  "dependencies": {
+    "dotenv": "16.0.3"
   }
 }
