chore: test ob outputs

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -35,6 +35,8 @@ jobs:
     name: Bump+CL+release
     runs-on: ubuntu-latest
     needs: build
+    outputs:
+      status: ${{ steps.releaser.outputs.release_created }}
     steps:
       - name: Download build
         uses: actions/download-artifact@v3
@@ -42,6 +44,7 @@ jobs:
           name: ars
       - uses: google-github-actions/release-please-action@v3
         with:
+          id: releaser
           release-type: node
           default-branch: main
           token: ${{secrets.GITHUB_TOKEN}}
@@ -49,3 +52,12 @@ jobs:
           path: src
           pull-request-title-pattern: "chore${scope}: to release${component} ${version}"
           pull-request-header: ":robot: I have created a release"
+  publish:
+    name: publish to repo
+    runs-on: ubuntu-latest
+#    if: ${{ needs.release-please.outputs.release_created }}
+    needs: release-please
+    steps:
+      - name: test by prev output job variables
+        run: |
+          echo "release-please release created: ${{ needs.release-please.outputs.status }}"
