--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -33,7 +33,7 @@ jobs:
           name: ars
           path: build
           retention-days: 3
-  release-please:
+  releaseplease:
     name: Bump+CL+release
     runs-on: ubuntu-latest
     needs: build
@@ -46,7 +46,7 @@ jobs:
           name: ars
       - name: check
         run: |
-          echo "${{ steps.releaser.outputs }}"
+          echo "${{ steps.save-status.outputs.status }}"
       - uses: google-github-actions/release-please-action@v3
         id: releaser
         with:
@@ -57,13 +57,16 @@ jobs:
           path: src
           pull-request-title-pattern: "chore${scope}: to release${component} ${version}"
           pull-request-header: ":robot: I have created a release"
+      - id: save-status
+        run: echo "status=${{steps.releaser.outputs.release_created}}" >> "$GITHUB_OUTPUT"
   publish:
     name: publication to repo
     runs-on: ubuntu-latest
-    if: ${{ needs.release-please.outputs.status }}
-    needs: release-please
+    needs: releaseplease
+#    if: ${{ needs.releaseplease.outputs.status }}
     steps:
       - name: test by prev output job variables
         run: |
           echo "OK. next publication ..."
-          echo "release-please release created: ${{ needs.release-please.outputs.status }}"
+          echo "release-please 1 release_created: ${{ needs.releaseplease.releaser.release_created }}"
+          echo "release-please 2 status: ${{ needs.releaseplease.outputs.status }}"
