--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,20 +37,20 @@ jobs:
     name: Bump+CL+release
     runs-on: ubuntu-latest
     needs: build
-    outputs:
-      status: ${{ steps.release.outputs.release_created }}
-      minor: ${{ steps.release.outputs.minor }}
-      major: ${{ steps.release.outputs.major }}
+#    outputs:
+#      status: ${{ steps.release.outputs.release_created }}
+#      minor: ${{ steps.release.outputs.minor }}
+#      major: ${{ steps.release.outputs.major }}
     steps:
       - name: Download build
         uses: actions/download-artifact@v3
         with:
           name: ars
-      - name: check
-        run: |
-          echo "status -> ${{ steps.status.outputs.status }}"
-          echo "major -> ${{ steps.status.outputs.major }}"
-          echo "minor -> ${{ steps.status.outputs.minor }}"
+#      - name: check
+#        run: |
+#          echo "status -> ${{ steps.status.outputs.status }}"
+#          echo "major -> ${{ steps.status.outputs.major }}"
+#          echo "minor -> ${{ steps.status.outputs.minor }}"
       - uses: google-github-actions/release-please-action@v3
         id: release
         with:
@@ -61,20 +61,17 @@ jobs:
           path: src
           pull-request-title-pattern: "chore${scope}: to release${component} ${version}"
           pull-request-header: ":robot: I have created a release"
-      - id: status
-        run: |
-          echo "status=${{ steps.release.outputs.release_created }}" >> "$GITHUB_OUTPUT"
-          echo "minor=${{ steps.release.outputs.minor }}" >> "$GITHUB_OUTPUT"
-          echo "major=${{ steps.release.outputs.major }}" >> "$GITHUB_OUTPUT"
+#      - id: status
+#        run: |
+#          echo "status=${{ steps.release.outputs.release_created }}" >> "$GITHUB_OUTPUT"
+#          echo "minor=${{ steps.release.outputs.minor }}" >> "$GITHUB_OUTPUT"
+#          echo "major=${{ steps.release.outputs.major }}" >> "$GITHUB_OUTPUT"
   publish:
     name: publication to repo
     runs-on: ubuntu-latest
     needs: releaser
-#    if: ${{ needs.releaser.outputs.status }}
+    if: ${{ needs.releaser.release.outputs.release_created }}
     steps:
       - name: test by prev output job variables
         run: |
-          echo "OK. next publication ..."
-          echo "release-please 1 release_created: ${{ needs.releaser.release.release_created }}"
-          echo "release-please 2 status: ${{ needs.releaser.outputs.status }}"
-          echo "release-please 3 minor: ${{ needs.releaser.outputs.minor }}"
+          echo "release-please 1 release_created: ${{ needs.releaser.release.outputs.release_created }}"
