fix: releaser config

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "start": "node -r dotenv/config build/index.js",
     "build": "rm -rf dist && node esbuild.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release:pr": "release-please release-pr --token=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 --repo-url=vios-onboarding/ars"
   },
   "devDependencies": {
     "@commitlint/cli": "17.5.1",
     "@commitlint/config-conventional": "17.4.4",
     "esbuild": "0.17.14",
-    "husky": "8.0.3"
+    "husky": "8.0.3",
+    "release-please": "15.9.2"
   },
   "dependencies": {
     "dotenv": "16.0.3"
