--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,10 +37,10 @@ jobs:
     name: Bump+CL+release
     runs-on: ubuntu-latest
     needs: build
-#    outputs:
-#      status: ${{ steps.release.outputs.release_created }}
-#      minor: ${{ steps.release.outputs.minor }}
-#      major: ${{ steps.release.outputs.major }}
+    outputs:
+      status: ${{ steps.release.outputs.releases_created }}
+      minor: ${{ steps.release.outputs.minor }}
+      major: ${{ steps.release.outputs.major }}
     steps:
       - name: Download build
         uses: actions/download-artifact@v3
@@ -70,8 +70,8 @@ jobs:
     name: publication to repo
     runs-on: ubuntu-latest
     needs: releaser
-    if: ${{ needs.releaser.release.outputs.release_created }}
+    if: ${{ needs.releaser.outputs.status }}
     steps:
       - name: test by prev output job variables
         run: |
-          echo "release-please 1 release_created: ${{ needs.releaser.release.outputs.release_created }}"
+          echo "release-please 1 release_created: ${{ needs.releaser.outputs.status }}"
