feat: dependbot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,18 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
+# https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 version: 2
 updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    allow:
+      - dependency-name: "release-please"
+    assignees:
+      - "V1os"
+    commit-message:
+      prefix: "npm"
+
+
